<resources>
    <string name="app_name">Unveil</string>

    <string name="homepage_explore">Explore</string>
    <string name="title_activity_main_page">Main Page</string>
    <string name="action_settings">Settings</string>
    <string name="placeholder">Placeholder</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_userpage">User Page</string>
    <string name="popular_tours_main_page">Popular Tours</string>

    <!-- Navigation Bottom Bar-->
    <string name="Home">Home</string>
    <string name="User">User</string>

    <!-- Info Box Text -->
    <string name="steps">Steps</string>
    <string name="distance">Distance</string>
    <string name="landmarks">Landmarks</string>
    <string name="today">Today</string>
    <string name="buttons">Button</string>

    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="SignOut">Sign Out</string>
    <string name="menu_accessibility">Accessibility</string>
    <string name="menu_language">Language</string>
    <string name="menu_dyslexic">Dyslexic Font</string>
    <string name="menu_colourblind">Colour Blind Mode</string>
    <string name="menu_textsize">Text Size</string>
    <string name="menu_theme">Theme</string>
    <string name="menu_blindmode">Colour Blind Mode</string>
    <string name="menu_fontsize">Text Size</string>
    <string name="name">Name and surname</string>
    <string name="English">English</string>
    <string name="Polish">Polish</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="big">Big</string>
    <array name="languages">
        <item>English</item>
        <item>Polish</item>
    </array>
    <array name="sizes">
        <item>Small</item>
        <item>Medium</item>
        <item>Big</item>
    </array>


    <string name="pplaceholder" />

    <!-- Landmark Info -->
    <string name="usb_name">USB</string>
    <string name="usb_description">The Urban Science Building</string>

    <string name="su_name">Students Union</string>
    <string name="su_description">Students Union Building</string>

    <string name="greysmon_name">Grey\'s Monument</string>
    <string name="greysmon_description">The monument in the middle of town</string>

    <string name="millenbridge_name">Millennium Bridge</string>
    <string name="millenbridge_description">Tilt bridge over River Tyne</string>

    <string name="vindolanda_name">Vindolanda</string>
    <string name="vindolanda_description">First Roman frontier in the north</string>

    <string name="thesill_name">The Sill National Landscape Discovery Centre</string>
    <string name="thesill_description">National park visitor attraction</string>

    <string name="kirkleyhall_name">Kirkley Hall Zoological Gardens</string>
    <string name="kirkleyhall_description">Zoo with over one hundred animals</string>

    <string name="kielder_name">Keilder Water and Forest Park</string>
    <string name="kielder_description">Englands largest forest and man made lake</string>

    <string name="whitehousefarm_name">Whitehouse Farm Centre</string>
    <string name="whitehousefarm_description">Northumberlands largest farm attraction</string>

    <string name="romanarmym_name">Roman Army Museum</string>
    <string name="romanarmym_description">Museum on one of the most complete sections of hadrians wall</string>

    <string name="woodhornm_name">Woodhorn Museum</string>
    <string name="woodhornm_description">Museum depicting lives of coal miners</string>

    <string name="morpethm_name">Morpeth Chantry Bagpipe Museum</string>
    <string name="morpethm_description">Museum specialising in the history of Northumbrian small pipes</string>

    <string name="alnwickc_name">Alnwick Castle</string>
    <string name="alnwickc_description">Second largest inhabited castle in England. Home of Duke of Northumberlands family</string>

    <string name="hexhamabbey_name">Hexham Abbey</string>
    <string name="hexhamabbey_description">Place of christian worship dedicated to St Andrew</string>

    <string name="bamburghc_name">Bamburgh Castle</string>
    <string name="bamburghc_description">Museum on one of the most complete sections of hadrians wall</string>

    <!-- Map Page -->
    <string name="routes">Routes</string>

    <!-- Route Creation Page -->
    <string name="createARoute">Create a Route</string>
    <string name="addLandmark">Add Landmark</string>
    <string name="startRoute">Start Route</string>
    <string name="totalDistance">Total Distance</string>

    <!-- Landmark Information Page -->
    <string name="moreInformation">More Info</string>
    <string name="landmarkVisitedText">You have visited this landmark!</string>
    <string name="landmarkNotVisitedText">You have not visited this landmark</string>

    <!-- Route Information -->
    <string name="usbSU">USB to SU</string>
    <string name="SUUSB">SU to USB</string>
    <string name="greysUSB">Greys to USB</string>
    <string name="greysUSBviaSU">Greys to USB via SU</string>

    <!-- Route Description -->
    <string name="usbSU_description">
        Starting at the USB, situated inside The Helix (the university\'s newest campus)
        this route takes you past the famous football stadium St. James\' Park and onto
        Newcastle University campus which is home to many prominent university buildings
        including The Students Union.
    </string>

    <string name="SUUSB_description">
        Starting at the Students Union, situated inside the Newcastle University campus,
        this route takes you past prominent university buildings, the iconic St James Park
        and onto the university\'s newest campus, The Helix, where the USB resides.
    </string>

    <string name="greysUSB_description">
        This route starts at Grey\'s monument, situated in the center of Newcastle and takes
        you past Eldon Square (a large shopping and eating area), past the iconic St. James Park
        and onto the university\'s newest campus, The Helix, where the USB is situated.
    </string>

    <string name="greysUSBviaSU_description">
        Starting at Grey\'s monument, which resides at the heart of the city, this route takes you
        past Eldon Square (a large shopping and eating area), through Newcastle University campus
        where the Students Union and other prominent university buildings reside, past St. James
        Park and onto the university\'s newest campus, The Helix, where the USB is situated.
    </string>

    <!-- Button Options -->
    <string name="tourButtonNav">Take me there</string>

    <!-- Misc -->
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCJ_QfnTxD9iRJbLdY_DoFLQKvopm26H6o</string>
</resources>
