<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.group7.unveil.MainPage">

    <TextView
        android:id="@+id/todayText"
        android:layout_width="314dp"
        android:layout_height="35dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="216dp"

        android:layout_marginEnd="48dp"
        android:text="@string/today"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/step_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="14dp"
        android:text="@string/placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/todayText" />

    <TextView
        android:id="@+id/steps_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="8dp"
        android:text="@string/steps"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/step_count" />

    <TextView
        android:id="@+id/distance_actual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="14dp"
        android:text="@string/placeholder"
        app:layout_constraintStart_toEndOf="@+id/step_count"
        app:layout_constraintTop_toBottomOf="@+id/todayText" />

    <TextView
        android:id="@+id/distance_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/distance"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/steps_name"
        app:layout_constraintTop_toBottomOf="@+id/distance_actual" />

    <TextView
        android:id="@+id/landmarks_visited"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="14dp"
        android:text="@string/placeholder"
        app:layout_constraintStart_toEndOf="@+id/distance_actual"
        app:layout_constraintTop_toBottomOf="@+id/todayText" />

    <TextView
        android:id="@+id/landmark_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/landmarks"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/distance_name"
        app:layout_constraintTop_toBottomOf="@+id/landmarks_visited" />

    <HorizontalScrollView
        android:layout_width="337dp"
        android:layout_height="174dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="152dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="133dp"
                android:layout_height="98dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="76dp"
                android:layout_marginBottom="16dp"
                android:scaleType="centerInside"
                android:src="@drawable/buttonimage"
                android:contentDescription="@string/buttons"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imageButton3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.571" />

            <ImageButton
                android:layout_width="133dp"
                android:layout_height="98dp"
                android:layout_marginStart="76dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:scaleType="centerInside"
                android:src="@drawable/buttonimage"
                android:contentDescription="@string/buttons"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageButton3"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.571" />

            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="133dp"
                android:layout_height="98dp"
                android:layout_marginStart="76dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:scaleType="centerInside"
                android:src="@drawable/buttonimage"
                android:contentDescription="@string/buttons"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageButton2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.571" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>

