<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pages.Settings">

    <!--    <include layout="@layout/content_settings" />-->

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        app:backgroundTint="@color/black"
        app:fabSize="mini"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/iconsett" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="679dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="116dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/white_paint2"
        tools:srcCompat="@drawable/white_paint2"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="123dp"
        android:layout_height="94dp"
        android:translationZ="20dp"
        app:layout_constraintBottom_toTopOf="@+id/usageInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.446"
        tools:ignore="ContentDescription" />

    <androidx.cardview.widget.CardView
        android:id="@+id/usageInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        app:cardBackgroundColor="#F5FFFFFF"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.gridlayout.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:columnCount="3">

            <TextView
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="12dp"
                android:id="@+id/step_count1"
                android:fontFamily="@font/cghotic"
                android:text="@string/placeholder"
                app:layout_gravity="top|center" />


            <TextView
                android:id="@+id/distance_actual"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="12dp"
                android:fontFamily="@font/cghotic"
                android:text="@string/placeholder"
                app:layout_gravity="top|center" />


            <TextView
                android:id="@+id/landmarks_visited"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="12dp"
                android:fontFamily="@font/cghotic"

                android:text="@string/placeholder"
                app:layout_gravity="top|center" />


            <TextView
                android:id="@+id/steps_name"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/cghotic"
                android:text="@string/steps"
                android:textSize="12sp"
                app:layout_gravity="bottom|center" />


            <TextView
                android:id="@+id/distance_name"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/cghotic"
                android:text="@string/distance"
                android:textSize="12sp"
                app:layout_gravity="bottom|center" />


            <TextView
                android:id="@+id/landmark_name"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/cghotic"
                android:text="@string/landmarks"
                android:textSize="12sp"
                app:layout_gravity="bottom|center" />


        </androidx.gridlayout.widget.GridLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/userDisplayName"
        android:layout_width="285dp"
        android:layout_height="36dp"
        android:fontFamily="@font/cghotic"
        android:gravity="center"
        android:text="@string/name"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="66dp"
        android:layout_height="33dp"
        android:fontFamily="@font/cghotic"
        android:text="@string/today"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/usageInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/usageInfo" />

</androidx.constraintlayout.widget.ConstraintLayout>
